
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {unsigned int tv_sec; scalar_t__ tv_usec; } ;
typedef int fd_set ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int F_GETFL ;
 int F_SETFL ;
 int O_NONBLOCK ;
 int close (int) ;
 scalar_t__ fcntl (int,int ,int) ;
 int select (int,int *,int *,int *,struct timeval*) ;

int read_timer(int fd, unsigned int time_out)
{



        int flags;
        int select_status;
        fd_set fdread;
        struct timeval timeout;

        if((flags = fcntl(fd, F_GETFL, 0)) < 0) {
                close(fd);
                return (-1);
        }

        if(fcntl(fd, F_SETFL, flags | O_NONBLOCK) < 0) {
                close(fd);
                return (-1);
        }

        timeout.tv_sec = time_out;
        timeout.tv_usec = 0;
        FD_ZERO(&fdread);
        FD_SET(fd, &fdread);
        select_status = select(fd + 1, &fdread, ((void*)0), ((void*)0), &timeout);

        if(select_status == 0) {
                close(fd);
                return (-1);
        }

        if(select_status == -1) {
                close(fd);
                return (-1);
        }

        if(FD_ISSET(fd, &fdread)) {

                if(fcntl(fd, F_SETFL, flags) < 0) {
                        close(fd);
                        return -1;
                }

                return 1;

        }
        else {
                close(fd);
                return 1;

        }
}
